// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`11. tile star is rendered as already saved 1`] = `
<Link
  disabled={false}
  onPress={[Function]}
>
  <IconStar
    fillColour="#006699"
    height={18}
    opacity="1"
    strokeColour="none"
  />
</Link>
`;

exports[`12. tile star is rendered as not yet saved 1`] = `
<Link
  disabled={false}
  onPress={[Function]}
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="1"
    strokeColour="#696969"
  />
</Link>
`;

exports[`13. tile star is disabled 1`] = `
<Link
  disabled={true}
  onPress={[Function]}
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="0.4"
    strokeColour="#696969"
  />
</Link>
`;
